<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aleppo Codex Reader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help Screen</string>
    <string name="main_menu">Main Menu</string>
	<string name="settings">Settings Menu</string>
	<string name="splash">Aleppo Codex Reader</string>
	<string name="splash_desc1">Read The Aleppo Codex by Touch</string>
	<string name="splash_desc2">Diamond Software</string>	
	<string name="book_selection">Aleppo Book Selection</string>
	<string name="book_viewer">Aleppo Book Viewer</string>
	<string name="button_joshua">Joshua</string>
	
	<string name="button_back_page">Back</string>
	<string name="button_next_page">Next</string>

	<string name="menu_translation_king_james_version">KJV</string>
	<string name="menu_translation_aleppo_hebrew">Aleppo Hebrew</string>
	<string name="menu_translation_elberfelder">Elberfelder</string>
</resources>
