<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/id_translation_king_james_version"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_translation_king_james_version"/>
        
    <item
        android:id="@+id/id_translation_aleppo_hebrew"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_translation_aleppo_hebrew"/>
        
    <item
        android:id="@+id/id_translation_elberfelder"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_translation_elberfelder"/>

</menu>
