<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:background="@color/DeepSkyBlue"    	
   	android:orientation="vertical"    	
   	android:layout_width="fill_parent"
	android:layout_height="fill_parent">    
    	
    	<TextView
        android:id="@+id/TextViewTopTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash" 
        android:textColor="@color/Black" 
        android:textSize="@dimen/title_font"
        android:gravity="center" 
        />

        <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_desc1" 
        android:textColor="@color/DarkOrchid" 
        android:textSize="@dimen/desc_font" 
        android:lineSpacingExtra="@dimen/line_spacing"         
	    android:background="@color/Tomato"  
	    android:gravity="center"  	
        />
    
    	<TextView
        android:id="@+id/TextViewBottomVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_desc2" 
        android:textColor="@color/DarkOrchid" 
        android:textSize="@dimen/desc_font" 
        android:lineSpacingExtra="@dimen/line_spacing"         
	    android:background="@color/Tomato"    	
        />
    
</LinearLayout>
